[gd_scene load_steps=3 format=3 uid="uid://bnnuwghoytpgb"]

[ext_resource type="Script" path="res://global/audio_player/audio_player.gd" id="1_1jm52"]
[ext_resource type="AudioStream" uid="uid://w5v6pcbuw68s" path="res://art/sfx/switch_007.ogg" id="2_brtas"]

[node name="audio_player" type="AudioStreamPlayer"]
script = ExtResource("1_1jm52")

[node name="music_player" type="AudioStreamPlayer" parent="."]

[node name="click_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_brtas")

[connection signal="finished" from="music_player" to="." method="_on_music_player_finished"]
